<resources>
    <string name="app_name">wdsportz</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="message">Message</string>
    <string name="wdsportz">WD Sportz</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_home">Home</string>
    <string name="nav_more">More</string>
    <string name="nav_score">Scores</string>
    <string name="nav_watch">Watch</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password1">Password</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="bottom_nav">Bottom Nav</string>

    <string name="name" />
    <string name="view_match">View Match</string>
    <string name="video">Video</string>
    <string name="home">Home</string>
    <string name="title_activity_auth__main">Auth_Main</string>
    <string name="google_developer_api_key">AIzaSyCysvDpijwEinE1mQOhUp8h-Ik1c_ju0WM</string>
    <string name="sign_up">Sign Up</string>
    <string name="LiveGuide">Live Guide</string>
    <string name="about">About</string>
    <string name="explore">Explore</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="invalid_credentials">Invalid Login</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="default_notification_channel_id">WDSportz</string>
    <string name="fcm_message">0001</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_here"><u>Register Here</u></string>


</resources>
