<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn='navigation_view'>

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/frag_Profile"
            android:icon="@drawable/blank_blank_man_profile_picturre"
            android:title="@string/profile" />
        <item
            android:id="@+id/Explore"
            android:icon="@drawable/saved"
            android:title="@string/explore" />

        <item
            android:id="@+id/LiveGuide"
            android:icon="@drawable/_likes__flames"
            android:title="@string/LiveGuide" />

        <item
            android:id="@+id/Notifications"
            android:icon="@drawable/_likes__flames"
            android:title="@string/notifications" />

    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/settingsSegment"
            android:icon="@drawable/saved"
            android:title="@string/settings" />

        <item
            android:id="@+id/frag_About"
            android:icon="@mipmap/information1"
            android:title="About" />
    </group>

</menu>

